# Atelier_CMAKE

./: CMakeLists.txt  CMakeLists_2
.github/workflows/: CMakeLists.yml  tests.yml
include/: calculator.h
src/: main.c
