cmake_minimum_required(VERSION 3.5)
project(calculator C)
add_subdirectory(include)
add_subdirectory(src)
include_directories(include)
enable_testing()
add_test(t1 src/lib/calculator add 2 4)
add_test(t2 src/lib/calculator sub 3 -2)
add_test(t3 src/lib/calculator mul 5 5)
add_test(t4 src/lib/calculator div 1 5)
